Closed Bug 400019 Opened 18 years ago Closed 18 years ago

clicking panel should just close menulist inside it (toolbar bookmark menu)

Categories

(Core :: XUL, defect, P1)

x86
Windows XP
defect

Tracking

()

VERIFIED FIXED
mozilla1.9beta3

People

(Reporter: enndeakin, Assigned: enndeakin)

References

Details

(Keywords: regression)

Attachments

(1 file, 1 obsolete file)

Steps to reproduce: 1. click star icon on address bar. 2. open the menulist. 3. click the bookmarks panel. The menulist should close but the panel should stay open I think this might be a Windows only regression. The fix here seems to be to remove the extra check for WM_ACTIVATE in nsWindow::EventIsInsideWindow. That supposedly will break bug 45108 but I don't see that happening.
Depends on: 395670
changing os to windows, since we know it happens there. if it really does happen on mac, we should change os to all. seeking blocking (as I sought it for bug #402115)
Flags: blocking1.9?
OS: Mac OS X → Windows XP
mconnor and beltzner feel this is an important blocker for 1.9
Flags: blocking1.9? → blocking1.9+
Priority: -- → P3
Transferring P1 from bug 403209. Is this the good component/product ?
Severity: normal → major
Keywords: qawanted
OS: Windows XP → All
Priority: P3 → P1
Hardware: PC → All
Summary: clicking panel should just close menulist inside it regressed → clicking panel should just close menulist inside it (toolbar bookmark menu)
Attached patch use a activateapp here instead (obsolete) — Splinter Review
This patch fixes this bug as well as bug 390197. The change is to some code that was added by bug 45108 when Windows+M is pressed to minimize all windows while hovering over the menu. This code skipped checking if the event occured over a popup for the WM_ACTIVATE event. Instead, we'll use the WM_ACTIVATEAPP event.
Assignee: nobody → enndeakin
Status: NEW → ASSIGNED
Attachment #293233 - Flags: superreview?(roc)
Attachment #293233 - Flags: review?(roc)
Blocks: 390197
Is there a better reviewer here?
Attachment #293233 - Attachment is obsolete: true
Attachment #293234 - Flags: superreview?(roc)
Attachment #293234 - Flags: review?(roc)
Attachment #293233 - Flags: superreview?(roc)
Attachment #293233 - Flags: review?(roc)
Maybe dougt might want to check this patch too?
Attachment #293234 - Flags: review?(dougt)
Comment on attachment 293234 [details] [diff] [review] this is a readable version of the patch! ere should review this also. you can comment out / remove the windows ce part of this. There is no way to test this on the mozilla 1.9 trunk yet (wince doesn't build yet). When I get windows ce working again, I will investigate.
Keywords: qawanted
Attachment #293234 - Flags: review?(emaijala)
Comment on attachment 293234 [details] [diff] [review] this is a readable version of the patch! Neil, did you check that there are no ill effects if config.trim_on_minimize is on?
Comment on attachment 293234 [details] [diff] [review] this is a readable version of the patch! + on the wince part.
Attachment #293234 - Flags: review?(dougt) → review+
dougt, did you mean the patch is ok as is, or to remove the windows ce part entirely? Ere, I don't see anything different happening with that pref set, either visibly or to memory use. The code being changed only gets executed when a popup is open though. Is there a specific case you were thinking might be a problem?
you can do either -- when wince is building again on trunk, i can look at this. (hopefully in a few weeks).
Comment on attachment 293234 [details] [diff] [review] this is a readable version of the patch! Nevermind about the pref. r=me
Attachment #293234 - Flags: review?(emaijala) → review+
Attachment #293234 - Flags: review?(roc)
Attachment #293234 - Flags: superreview?(roc) → superreview+
patch as 3 reviews is it possible to land ?
Yes, but I won't have access to Windows for a bit, so someone else should do it.
Keywords: checkin-needed
Neil, what should be done? Running a build with the patch and have tests? If I understand it right and no-one can build it on Windows we could use the Tryserver therefor?
There is no means of creating tests for this currently, it requires native messages to be sent. Testing involves making sure this and bug 390197 are fixed. I'm not too worried about that though. I just won't be able to fix any problems that occur if the evil test machine fails.
If someone sends me a build I can test it...
We're not actually looking for someone to test it, but it would still be useful. We're looking for someone to check it in and be able to monitor the tinderbox afterwards.
Checking in widget/src/windows/nsWindow.cpp; /cvsroot/mozilla/widget/src/windows/nsWindow.cpp,v <-- nsWindow.cpp new revision: 3.723; previous revision: 3.722 done
Status: ASSIGNED → RESOLVED
Closed: 18 years ago
Keywords: checkin-needed
OS: All → Windows XP
Hardware: All → PC
Resolution: --- → FIXED
Target Milestone: --- → mozilla1.9 M11
Neil, we have the correct behavior now. But I see another problem which seems to be raised by this patch? When I click on the menulist the complete name field is highlighted. It is reverted when closing the menulist again. Should I file a new bug for that issue? I don't think that is expected.
Status: RESOLVED → VERIFIED
(In reply to comment #26) > Should I file a new bug for that issue? You should always file new bugs.
Component: XP Toolkit/Widgets: Menus → XUL
QA Contact: xptoolkit.menus → xptoolkit.widgets
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: