Bug 400019 - "clicking panel should just close menulist inside it (toolbar bookmark menu)" [p=enndeakin@sympatico.ca (Neil Deakin) r=dougt r=emaijala sr=roc a=blocking1.9+]